--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.40.0",
     "react-i18next": "^12.0.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
