--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@fullpage/react-fullpage": "^0.1.40",
     "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.13",
+    "@mui/material": "^5.14.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
     "react-i18next": "^12.0.0",
+    "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
